--- a/_sass/_base.sass
+++ b/_sass/_base.sass
@@ -1568,6 +1568,7 @@ section
               color: #212529
               white-space: normal
               text-align: start
+              font-size: 15px
           &.divider
             padding-left: 6px
             padding-right: 6px
@@ -3258,7 +3259,7 @@ $ocean-nodes-h3-margin-bottom: 30px
     max-width: unset
     width: 100%
 
-.smart-farming-nav a
+.usecases-bottom-nav a
   margin: 10px 20px 10px 0
   &:last-of-type
     margin-right: 0
