Changed script for the image-gallery.html (images showing)

--- a/_includes/images-gallery.html
+++ b/_includes/images-gallery.html
@@ -5,20 +5,20 @@
     {% endfor %}
 </ul>
 {% endif %}
-
 <div itemscope itemtype="https://schema.org/ImageGallery" class="images-gallery" style="justify-content: {{ include.align | default: 'start'}};">
     {% for image in page[include.imageCollection] %}
         <figure itemprop="associatedMedia" itemscope itemtype="https://schema.org/ImageObject" style="max-width: min({{ include.max-width | default: '225px'}}, 100%);
                 max-height: min({{ include.max-height | default: '225px'}}, 100%);"
             {% if page[include.imageCollection].size > 1 %} class="list-item"{% endif %}>
+            {% assign modifiedString = image[1].title | replace: "'", "&#39;" %}
             <a href="{{image[1].image}}" itemprop="contentUrl">
                 {% if include.preview == "false" %}
-                <img src="{{image[1].image}}" itemprop="thumbnail"  alt='{{image[1].title | remove: "*" | replace: "\\\"", "" | replace: "'", "\""}}' />
+                <img src="{{image[1].image}}" itemprop="thumbnail"  alt='{{modifiedString | remove: "*"}}' />
                 {% else %}
-                <img src="{{image[1].image | split: "" | reverse | join: "" | replace_first: ".", ".weiverp-" | split: "" | reverse | join: ""}}" itemprop="thumbnail"  alt='{{image[1].title | remove: "*" | replace: "\\\"", "" | replace: "'", "\""}}' />
+                <img src="{{image[1].image | split: "" | reverse | join: "" | replace_first: ".", ".weiverp-" | split: "" | reverse | join: ""}}" itemprop="thumbnail"  alt='{{modifiedString | remove: "*"}}' />
                 {% endif %}
             </a>
-            <figcaption itemprop="caption description">{{image[1].title}}</figcaption>
+            <figcaption itemprop="caption description">{{modifiedString}}</figcaption>
         </figure>
     {% endfor %}
 </div>
